--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,7 +35,8 @@ body {
   align-items: center;
 }
 
-form {
+form,
+.controls {
   margin-bottom: 2rem;
 }
 
@@ -66,16 +67,23 @@ button {
   outline: none;
   border: none;
   background-color: #cadbe4;
-  color:#113447;
+  color:#a5a5a5;
   height: 25px;
   padding: 2px 5px;
-  cursor: pointer;
   transition: 0.2s;
 
-  &:active{
-    background-color: #113447;
-    color: #cadbe4;
+  &.btn--active {
+    color:#113447;
+    cursor: pointer;
+
+    &:active{
+      background-color: #113447;
+      color: #cadbe4;
+    }
+
   }
+
+
 }
 
 .field {
